Fix overflowing opening hours in mobile

--- a/src/components/pages/Start/Map/map.module.scss
+++ b/src/components/pages/Start/Map/map.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 600px;
+  height: 1000px;
 
   @media (min-width: 768px) {
     flex-direction: row;
@@ -11,7 +11,7 @@
 
 .mapContainer {
   width: 100%;
-  height: 300px;
+  height: 500px;
 
   @media (min-width: 768px) {
     width: 50%;
@@ -21,13 +21,13 @@
 
 .address {
   width: 100%;
-  height: 300px;
+  height: 500px;
   padding: 10rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-size: 32px;
+  font-size: 18px;
   flex-direction: column;
   font-weight: 700;
 
@@ -38,13 +38,18 @@
   @media (min-width: 768px) {
     width: 50%;
     height: auto;
+    font-size: 32px;
   }
 }
 
 .openingHours {
-  margin-top: 40px;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 18px;
+
+  @media (min-width: 768px) {
+    margin-top: 40px;
+    font-size: 24px;
+  }
 
   h4 {
     margin-top: 20px;
